# module-sysconf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  qore-sysconf-module.spec
cmake/: FindQore.cmake
cmake/modules/: FindQore.cmake
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  constants_confstr.qpp  constants_pathconf.qpp  constants_sysconf.qpp  sysconf-module.cpp  sysconf.qpp
test/: sysconf.q  sysconf.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
